# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2026 Robin Jarry

cli_src += files(
    'bridge.c',
    'flood.c',
    'fdb.c',
    'iface_security.c',
    'l2_stats.c',
    'mcast_snooping.c',
    'port_mirror.c',
    'rstp.c',
    'storm_control.c',
    'vlan_filtering.c',
    'vxlan.c',
)
