# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2026 Robin Jarry

cli_src += files(
    'bridge.c',
    'dai.c',
    'dhcp_snooping.c',
    'flood.c',
    'fdb.c',
    'iface_security.c',
    'ipsg.c',
    'l2_stats.c',
    'mcast_snooping.c',
    'port_mirror.c',
    'qos.c',
    'rstp.c',
    'storm_control.c',
    'vlan_filtering.c',
    'vxlan.c',
)
